metadataPackage_1562763916814/objects/Sensor__e.object
<CustomObject>
    <label>Sensor</label>
    <pluralLabel>Sensors</pluralLabel>
    <fields>
        <fullName>Power_Output__c</fullName>
        <label>Power Output</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>